ライブラリ一覧にCentOS8の情報を追加

--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -12,8 +12,9 @@
 <h2>目次</h2>
 <ul>
 <li><a href="#change">変更履歴</a></li>
-<li><a href="#now">2018/01/18時点最新版</a></li>
+<li><a href="#now">2019/10/01時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
+<li><a href="#110">pg_stats_reporter 11</a></li>
 <li><a href="#100">pg_stats_reporter 10</a></li>
 <li><a href="#33">pg_stats_reporter 3.3</a></li>
 <li><a href="#32">pg_stats_reporter 3.2</a></li>
@@ -37,6 +38,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.13版</td>
+<td>2019/10/01</td>
+<td>最新版の表からCentOS 6を削除、CentOS 8を追加<br/>pg_stats_reporterを追加</td>
+</tr>
+<tr>
 <td>第1.12版</td>
 <td>2019/02/05</td>
 <td>最新版の表からPHP 5.5.38とPHP 5.6.40を削除</td>
@@ -56,22 +62,12 @@
 <td>2017/09/11</td>
 <td>pg_stats_reporter 3.3の記述を追加</td>
 </tr>
-<tr>
-<td>第1.8版</td>
-<td>2017/09/05</td>
-<td>2017/09/05時点最新版の更新</td>
-</tr>
-<tr>
-<td>第1.7版</td>
-<td>2017/05/17</td>
-<td>2017/05/17時点最新版へ修正<br/>ライブラリ最新版をtrunkへ反映した(Rev.991)ため、trunkの情報を最新化</td>
-</tr>
 </tbody>
 </table>
 
 <br/><hr/>
 
-<h2 id="now">【2019/01/18時点最新版】</h2>
+<h2 id="now">【2019/10/01時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -86,93 +82,90 @@
 <tbody>
 <tr>
 <td rowspan="35">PHP</td>
-<td rowspan="10">5.3.3</td>
-<td bgcolor="white">php-5.3.3-49.el6</td>
-<td rowspan="5" bgcolor="cyan">CentOS 6.10<br/>yum updateした最新版</td>
-</tr>
-<tr>
-<td bgcolor="white">php-cli-5.3.3-49.el6</td>
-</tr>
-<tr>
-<td bgcolor="white">php-common-5.3.3-49.el6</td>
-</tr>
-<tr>
-<td bgcolor="white">php-pgsql-5.3.3-49.el6</td>
-</tr>
-<tr>
-<td bgcolor="white">php-intl-5.3.3-49.el6</td>
-</tr>
-
-<tr>
-<td>php-5.3.3-49.el6</td>
-<td rowspan="5">最新版未確認<br/>CentOS 6.9<br/>インストール媒体版</td>
-</tr>
-<tr>
-<td>php-cli-5.3.3-49.el6</td>
-</tr>
-<tr>
-<td>php-common-5.3.3-49.el6</td>
-</tr>
-<tr>
-<td>php-pgsql-5.3.3-49.el6</td>
-</tr>
-<tr>
-<td>php-intl-5.3.3-49.el6</td>
-</tr>
-
-<tr>
 <td rowspan="10">5.4.16</td>
-<td bgcolor="cyan">php-5.4.16-46.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7 1810(7.6)<br/>yum updateした最新版</td>
+<td bgcolor="white">php-5.4.16-46.el7</td>
+<td rowspan="5" bgcolor="cyan">CentOS 7 1908(7.7)<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.4.16-46.el7</td>
+<td bgcolor="white">php-cli-5.4.16-46.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.4.16-46.el7</td>
+<td bgcolor="white">php-common-5.4.16-46.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.4.16-46.el7</td>
+<td bgcolor="white">php-pgsql-5.4.16-46.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-5.4.16-46.el7</td>
-</tr>
-
-<tr>
-<td bgcolor="cyan">php-5.4.16-46.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7 1810(7.6)<br/>インストール媒体版</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-cli-5.4.16-46.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-common-5.4.16-46.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-pgsql-5.4.16-46.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-intl-5.4.16-46.el7</td>
+<td bgcolor="white">php-intl-5.4.16-46.el7</td>
 </tr>
 
 <tr>
-<td bgcolor="cyan">7.3.1</td><td rowspan="5" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
+<td bgcolor="white">php-5.4.16-46.el7</td>
+<td rowspan="5" bgcolor="cyan">CentOS 7 1908(7.7)<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">7.2.14</td>
+<td bgcolor="white">php-cli-5.4.16-46.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">7.1.26</td>
+<td bgcolor="white">php-common-5.4.16-46.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">7.0.33</td>
+<td bgcolor="white">php-pgsql-5.4.16-46.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">5.6.40</td>
+<td bgcolor="white">php-intl-5.4.16-46.el7</td>
+</tr>
+
+<tr>
+<td rowspan="10" bgcolor="cyan">7.2.11</td>
+<td bgcolor="cyan">php-7.2.11-1.module_el8.0.0</td>
+<td rowspan="5" bgcolor="cyan">CentOS 8.0<br/>yum updateした最新版</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-cli-7.2.11-1.module_el8.0.0</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-common-7.2.11-1.module_el8.0.0</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-pgsql-7.2.11-1.module_el8.0.0</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-intl-7.2.11-1.module_el8.0.0</td>
+</tr>
+
+<tr>
+<td bgcolor="cyan">php-7.2.11-1_module_el8.0.0</td>
+<td rowspan="5" bgcolor="cyan">CentOS 8.0<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-cli-7.2.11-1.module_el8.0.0</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-common-7.2.11-1.module_el8.0.0</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-pgsql-7.2.11-1.module_el8.0.0</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-intl-7.2.11-1.module_el8.0.0</td>
+</tr>
+
+<tr>
+<td bgcolor="cyan">7.3.10</td><td rowspan="4" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
+</tr>
+<tr>
+<td bgcolor="cyan">7.2.23</td>
+</tr>
+<tr>
+<td bgcolor="cyan">7.1.32</td>
+</tr>
+<tr>
+<td bgcolor="cyan">7.4RC2</td>
 </tr>
 </tbody>
 <tfoot><tr><td colspan="4">
-※ CentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
+※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>※ CentOS 8では、 php-intlはインストールディスクに含まれる<br/>
 </td></tr></tfoot>
 </table>
 <br/>
@@ -190,7 +183,7 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">3.3.1</td>
+<td bgcolor="white">3.3.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td></td>
 </tr>
@@ -202,13 +195,13 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.33</td>
+<td bgcolor="white">3.1.33</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.31.1</td>
+<td bgcolor="white">2.31.1</td>
 <td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
 <td bgcolor="white">PagerおよびPagerで使用するアイコンはaddonsに含まれています</td>
 </tr>
@@ -232,7 +225,7 @@
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="cyan">1.7.10</td>
+<td bgcolor="white">1.7.10</td>
 <td bgcolor="white"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
 <td></td>
 </tr>
@@ -332,28 +325,28 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">3.3.1</td>
+<td bgcolor="white">3.3.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td bgcolor="white">jquery-3.3.1.min.js</td>
 <td></td>
 </tr>
 <tr>
 <td>jqPlot</td>
-<td bgcolor="cyan">1.0.9.d96a669</td>
+<td bgcolor="white">1.0.9.d96a669</td>
 <td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
 <td>jquery.jqplot.1.0.9.d96a669.zip</td>
 <td></td>
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.33</td>
+<td bgcolor="white">3.1.33</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td bgcolor="white">smarty-3.1.33.tar.gz</td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.31.1</td>
+<td bgcolor="white">2.31.1</td>
 <td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
 <td bgcolor="white">tablesorter-2.31.1.tar.gz</td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
@@ -381,7 +374,139 @@
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="cyan">1.7.10</td>
+<td bgcolor="white">1.7.10</td>
+<td bgcolor="white"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
+<td>superfish-master.zip</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+</tbody>
+<tfoot><tr><td colspan="5">
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
+</td></tr></tfoot>
+</table>
+
+<br/><hr/>
+
+<h2 id="110">【pg_stats_reporter 11】</h2>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="4">使用言語</th></tr>
+<tr>
+<th>言語</th>
+<th>バージョン</th>
+<th>試験時使用パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="10">PHP</td>
+<td rowspan="10">5.4.16</td>
+<td bgcolor="white">php-5.4.16-46.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1804(7.5)<br/>yum updateした最新版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.4.16-46.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.4.16-46.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.4.16-46.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.4.16-46.el7</td>
+</tr>
+
+<tr>
+<td bgcolor="white">php-5.4.16-45.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 1804(7.5)<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.4.16-45.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.4.16-45.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.4.16-45.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.4.16-45.el7</td>
+</tr>
+
+</tbody>
+<tfoot><tr><td colspan="4">
+※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意
+</td></tr></tfoot>
+</table>
+<br/>
+
+<table border="1">
+<thead>
+<tr><th align="left" colspan="5">使用ライブラリ</th></tr>
+<tr>
+<th>ライブラリ</th>
+<th>バージョン</th>
+<th>URL</th>
+<th>パッケージ</th>
+<th>備考</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>jQuery</td>
+<td bgcolor="white">3.3.1</td>
+<td><a href="http://jquery.com/">http://jquery.com/</a></td>
+<td bgcolor="white">jquery-3.3.1.min.js</td>
+<td></td>
+</tr>
+<tr>
+<td>jqPlot</td>
+<td bgcolor="white">1.0.9.d96a669</td>
+<td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
+<td>jquery.jqplot.1.0.9.d96a669.zip</td>
+<td></td>
+</tr>
+<tr>
+<td>Smarty</td>
+<td bgcolor="white">3.1.33</td>
+<td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
+<td bgcolor="white">smarty-3.1.33.tar.gz</td>
+<td></td>
+</tr>
+<tr>
+<td>tablesorter</td>
+<td bgcolor="white">2.31.1</td>
+<td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
+<td bgcolor="white">tablesorter-2.31.1.tar.gz</td>
+<td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
+</tr>
+<tr>
+<td>dygraphs JavaScript Visualization Library</td>
+<td bgcolor="white">2.1.0</td>
+<td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
+<td bgcolor="white">dygraph.js, dygraph.min.js, dygraph.css</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>jQuery UI</td>
+<td bgcolor="white">1.12.1</td>
+<td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
+<td bgcolor="white">jquery-ui-1.12.1.custom.zip</td>
+<td></td>
+</tr>
+<tr>
+<td>jquery-ui-timepicker-addon.js</td>
+<td bgcolor="white">1.6.3</td>
+<td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
+<td bgcolor="white">jquery-ui-timepicker-addon.js, jquery-ui-timepicker-addon.css</td>
+<td>ファイル名にバージョン情報が付いていないので注意</td>
+</tr>
+<tr>
+<td>Superfish</td>
+<td bgcolor="white">1.7.10</td>
 <td bgcolor="white"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
 <td>superfish-master.zip</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
