--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -34,6 +34,11 @@
 </thead>
 <tbody>
 <tr>
+<tr>
+<td>第1.18版</td>
+<td>2020/01/10</td>
+<td>trunkの使用ライブラリを更新</td>
+</tr>
 <td>第1.17版</td>
 <td>2020/01/07</td>
 <td>2020/01/07最新版に更新</td>
@@ -52,11 +57,6 @@
 <td>第1.14版</td>
 <td>2019/10/04</td>
 <td>PHP 7.2の使用パッケージにphp-xmlを追加<br/>pg_stats_reporter 3.2以前の情報を削除し、情報確認方法を記述<br/>trunk版の表からCentOS 6を削除、CentOS 8を追加</td>
-</tr>
-<tr>
-<td>第1.13版</td>
-<td>2019/10/01</td>
-<td>最新版の表からCentOS 6を削除、CentOS 8を追加<br/>pg_stats_reporterを追加</td>
 </tr>
 </tbody>
 </table>
@@ -154,13 +154,13 @@
 </tr>
 
 <tr>
-<td bgcolor="cyan">7.4.1</td><td rowspan="3" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
+<td bgcolor="white">7.4.1</td><td rowspan="3" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">7.3.13</td>
+<td bgcolor="white">7.3.13</td>
 </tr>
 <tr>
-<td bgcolor="cyan">7.2.26</td>
+<td bgcolor="white">7.2.26</td>
 </tr>
 </tbody>
 <tfoot><tr><td colspan="4">
@@ -194,13 +194,13 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.34</td>
+<td bgcolor="white">3.1.34</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.31.2</td>
+<td bgcolor="white">2.31.2</td>
 <td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
 <td bgcolor="white">PagerおよびPagerで使用するアイコンはaddonsに含まれています</td>
 </tr>
@@ -362,16 +362,16 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="white">3.1.33</td>
+<td bgcolor="cyan">3.1.34</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
-<td bgcolor="white">smarty-3.1.33.tar.gz</td>
+<td bgcolor="cyan">smarty-3.1.34.tar.gz</td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="white">2.31.1</td>
+<td bgcolor="cyan">2.31.2</td>
 <td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
-<td bgcolor="white">tablesorter-2.31.1.tar.gz</td>
+<td bgcolor="cyan">tablesorter-2.31.2.tar.gz</td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
 </tr>
 <tr>
